alter circles columns
