# pkg/database/model.go
@@ -35,32 +35,40 @@ func (m CircleList) circles() []*model.Circle {
 }
 
 type Circle struct {
-	ID          int     `db:"id"`
-	Name        string  `db:"name"`
-	About       string  `db:"about"`
-	CatchCopy   string  `db:"catch_copy"`
-	Description string  `db:"description"`
-	CategoryID  int     `db:"circle_category_id"`
-	Email       string  `db:"email"`
-	Twitter     string  `db:"twitter"`
-	URL         string  `db:"url"`
-	EyeCatch    string  `db:"eyecatch"`
-	TypeID      *int    `db:"type_id"`
-	TypeName    *string `db:"type_name"`
+	ID            int     `db:"id"`
+	Name          string  `db:"name"`
+	About         string  `db:"about"`
+	CatchCopy     string  `db:"catch_copy"`
+	Cost          *string `db:"cost"`
+	Location      *string `db:"location"`
+	WorkTime      *string `db:"work_time"`
+	MembersNumber *string `db:"members_number"`
+	Description   string  `db:"description"`
+	CategoryID    int     `db:"circle_category_id"`
+	Email         string  `db:"email"`
+	Twitter       string  `db:"twitter"`
+	URL           string  `db:"url"`
+	EyeCatch      string  `db:"eyecatch"`
+	TypeID        *int    `db:"type_id"`
+	TypeName      *string `db:"type_name"`
 }
 
 type GetCircle struct {
-	ID          int    `db:"id"`
-	Name        string `db:"name"`
-	About       string `db:"about"`
-	CatchCopy   string `db:"catch_copy"`
-	Description string `db:"description"`
-	CategoryID  int    `db:"circle_category_id"`
-	Email       string `db:"email"`
-	Twitter     string `db:"twitter"`
-	URL         string `db:"url"`
-	EyeCatch    string `db:"eyecatch"`
-	UpdatedAt   string `db:"updated_at"`
+	ID            int     `db:"id"`
+	Name          string  `db:"name"`
+	About         string  `db:"about"`
+	CatchCopy     string  `db:"catch_copy"`
+	Cost          *string `db:"cost"`
+	Location      *string `db:"location"`
+	WorkTime      *string `db:"work_time"`
+	MembersNumber *string `db:"members_number"`
+	Description   string  `db:"description"`
+	CategoryID    int     `db:"circle_category_id"`
+	Email         string  `db:"email"`
+	Twitter       string  `db:"twitter"`
+	URL           string  `db:"url"`
+	EyeCatch      string  `db:"eyecatch"`
+	UpdatedAt     string  `db:"updated_at"`
 }
 
 type CircleType struct {
@@ -84,6 +92,10 @@ func (m GetCircle) circle(ct []CircleType, ci []CircleImage) *model.GetCircle {
 	result.Twitter = m.Twitter
 	result.URL = m.URL
 	result.EyeCatch = m.EyeCatch
+	result.Cost = m.Cost
+	result.Location = m.Location
+	result.WorkTime = m.WorkTime
+	result.MembersNumber = m.MembersNumber
 
 	result.Types = make([]model.CircleType, 0, len(ct))
 	result.Images = make([]model.CircleImages, 0, len(ci))
